--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs-mate": "^4.0.0",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
+    "googleapis": "^144.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
